# tfspec

./: .gitignore  .pre-commit-config.yaml  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
requirements/: dev.in  dev.txt  test.in  test.txt
src/tfspec/: __init__.py  design.rst  tfspec.py
tests/: test_spec.py
