[metadata]
name = TerraformSpec
project_urls =
    Code = https://github.com/the-fool/tfspec
    Issue tracker = https://github.com/the-fool/tfspec/issues
license = BSD-3-Clause
maintainer_email = truble@google.com
description = A simple Terraform spec tool.
long_description = file: README.rst
long_description_content_type = text/x-rst