[metadata]
name = TerraformSpec
project_urls =
    Code = https://github.com/the-fool/tfspec
    Issue tracker = https://github.com/the-fool/tfspec/issues
license = BSD-3-Clause
maintainer_email = truble@google.com
description = A simple Terraform spec tool.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    tfspec
    tests

[coverage:paths]
source =
    src
    */site-packages
